--- a/Prueba/index.html
+++ b/Prueba/index.html
@@ -45,9 +45,9 @@
     <section id="galeria">
         <h2>Galería</h2>
         <div class="galeria-imagenes">
-            <img src="imagen1.jpg" alt="Torta de chocolate">
-            <img src="imagen2.jpg" alt="Torta de vainilla">
-            <img src="imagen3.jpg" alt="Torta de fresa">
+            <img src="/Img/pastel.jpeg" alt="Torta de chocolate">
+            <img src="/Img/pastel.jpg" alt="Torta de vainilla">
+            <img src="/Img/Pastel2.jpeg" alt="Torta de fresa">
             <!-- Agrega más imágenes según sea necesario -->
         </div>
     </section>
